# solid-check

./: .gitattributes  .gitignore  .prettierignore  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RUST_MIGRATION.md  THIRD_PARTY_NOTICES.md  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.changeset/: add-compiler-dynamic-attributes.md  add-insert-host-option.md  add-jsx-customize-script.md  add-sld-dom-expressions.md  babel-wrapperless-and-style-fixes.md  config.json  defer-held-fragment-activation.md  expose-classvalue-type.md  expose-void-rawtext-everywhere.md  fix-and-condition-value-semantics.md  fix-awaited-stream-root-holes.md  fix-composite-class-tokens.md  fix-dynamic-renderer-routing.md  fix-effect-compute-prev-leak.md  fix-insert-double-bind.md  fix-numbered-id-reserved-words.md  fix-omit-closing-tag-per-slot-markers.md  fix-scope-wrap-dynamic-desync.md  fix-server-mergeprops-function-source.md  fix-sld-template-content.md  fix-sld-top-level-templates.md  fix-ssr-child-ordering.md  fix-ssr-plain-object-child-crash.md  fix-ssr-spread-child-scope-wrap.md  fix-ssr-spread-mergeprops-id-order.md  fix-streamed-fragment-comment-range.md  hole-owner-id-scopes.md  hyper-mapArray-row-overexec.md  hyper-tagged-thunks.md  insert-slot-ownership.md  jsx-compiler-babel-parity.md  jsx-compiler-config-parity.md  kind-numbers-attend.md  nested-root-delegation.md  normalize-manifest-asset-urls.md  normalize-repository-urls.md  optimize-leading-static-classes.md  oxc-deferred-jsx-parity.md  perf-reconcile-single-anchor-end-swap.md  port-main-maintenance.md  (+23 more)
.cursor/rules/: releases.mdc
.github/workflows/: ci.yml  corpus.yml  jsx-compiler-binaries.yml  main-ci.yml  publish-npm.yml  release.yml
.pnpm-store/v11/: index.db-shm  index.db-wal
.zed/: settings.json  tasks.json
benchmarks/: generate-bench-corpus.mjs
benchmarks/phase1/: typefacts-v1-golden.cbor  typefacts-v1-golden.json  typefacts-v2-golden.cbor  typefacts-v2-golden.json  typefacts-v2-request-golden.cbor  typefacts-v2-request-golden.json
cmd/solid-check/: main.go  main_test.go
cmd/solid-checkd/: main.go
cmd/solid-typefacts/: lifecycle_benchmark_test.go  main.go  main_test.go
docs/: README.md  compiler-facts.md  eslint-rule-audit.md  glossary.md  implementation-status.md  interprocedural-solver.md  milestone-5.md  milestone-6.md  milestone-7.md  milestone-8.md  monorepo.md  package-contracts.md  performance.md  reactivity-checker-plan.md  semantic-inventory.md  tracer-bullet.md  tsgolint-extraction.md  typefacts-protocol-v3.md  typefacts.md  zed.md
docs/rules/: README.md  action-called-in-owned-scope.md  affects-keys-on-accessor.md  affects-target-unresolved.md  async-outside-loading-boundary.md  cleanup-in-forbidden-scope.md  cleanup-return-unresolved.md  component-props-destructure.md  component-returns-conditionally.md  execution-map-incomplete.md  flush-in-forbidden-scope.md  invalid-affects-target.md  invalid-cleanup-return.md  invalid-refresh-target.md  missing-effect-function.md  no-owner-boundary.md  no-owner-cleanup.md  no-owner-effect.md  package-contract-export-missing.md  package-contract-missing.md  pending-async-forbidden-scope.md  pending-async-untracked-read.md  primitive-in-directive-application.md  primitive-in-leaf-owner.md  reactive-read-after-await.md  reactive-write-in-owned-scope.md  refresh-target-unresolved.md  settled-cleanup-unowned.md  strict-read-untracked.md  sync-node-received-async.md
examples/solid-2-dev-app/: .gitignore  .oxlintrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json
internal/compilerfacts/: client.go  client_test.go  protocol.go  protocol_test.go
internal/engine/: engine.go  native.go  native_async_boundary_test.go  native_benchmark_test.go  native_callback_forwarding_test.go  native_compilerfacts_test.go  native_control_flow_test.go  native_directive_test.go  native_eslint_migration_test.go  native_execution_phases_test.go  native_integration_test.go  native_leaf_owner_test.go  (+10 more)
rust/: Cargo.toml  README.md
rust/solid-ast-facts/: Cargo.toml
rust/solid-ast-facts/src/: lib.rs  span_index.rs
rust/solid-check-wasm/: Cargo.toml
rust/solid-checker-wasm/: Cargo.toml
rust/solid-checker-wasm/src/: lib.rs
rust/solid-compiler-facts/: Cargo.toml
rust/solid-compiler-facts/src/: lib.rs
rust/solid-facts/: Cargo.toml
rust/solid-facts-backend/: Cargo.toml
rust/solid-facts-backend/src/: cache.rs  daemon.rs  daemon_cache.rs  demand_plan.rs  diagnostics.rs  json_output.rs  lib.rs  main.rs  snapshot_emission.rs  transport.rs
rust/solid-facts-backend/tests/: cli_process.rs  contracts_process.rs  diagnostics_process.rs  rule_quality_process.rs  sessions_process.rs  transport_process.rs  typefacts_process.rs
rust/solid-facts-backend/tests/support/: diagnostics.rs  process.rs
rust/solid-facts-core/: Cargo.toml
rust/solid-facts-core/src/: lib.rs
rust/solid-facts/src/: lib.rs
rust/solid-lsp/: Cargo.toml
rust/solid-lsp/src/: lib.rs  main.rs
rust/solid-lsp/tests/: server.rs
rust/solid-reactive-ir/: Cargo.toml
rust/solid-reactive-ir/src/: cleanup.rs  contracts.rs  directives.rs  execution_role.rs  indexes.rs  interproc.rs  lib.rs  reachability.rs  static_api.rs  symbols.rs
rust/solid-reactive-solver/: Cargo.toml
rust/solid-reactive-solver/src/: lib.rs  rules.rs
rust/solid-ts-facts/: Cargo.toml
rust/solid-ts-facts/src/: lib.rs  v3.rs
rust/solid-ts-facts/tests/: typefacts_v2_codec_golden.rs
schema/: certification-snapshot.schema.json  solid-reactivity.schema.json  typefacts-codec-limits.json  typefacts-v1.schema.json  typefacts-v2.schema.json
scripts/: assemble-npm-package.mjs  assemble-npm-package.test.mjs  compiler-conformance.mjs  eslint-migration-conformance.mjs  generate-solid-primitives-contracts.sh  lsp-smoke.mjs  oxlint-conformance.mjs  oxlint-fix-conformance.mjs  package-cli-conformance.mjs  package-rust.mjs  prepare-solid-primitives-corpus.mjs  run-solid-primitives-corpus.sh  validate-solid-primitives-contracts.sh  verify.sh  zed-config-conformance.mjs
(+236 files in other folders)
