[workspace]
resolver = "2"
members = [
  "solid-facts-core",
  "solid-ast-facts",
  "solid-compiler-facts",
  "solid-ts-facts",
  "solid-facts",
  "solid-facts-backend",
  "solid-reactive-ir",
  "solid-reactive-solver",
  "solid-lsp",
  "solid-check-wasm",
]

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.97"

[workspace.dependencies]
ciborium = "0.2"
compact_str = { version = "0.9.1", features = ["serde"] }
oxc_allocator = "0.118"
oxc_ast = "0.118"
oxc_ast_visit = "0.118"
oxc_diagnostics = "0.118"
oxc_parser = "0.118"
oxc_span = "0.118"
oxc_syntax = "0.118"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
oxc_miette = { package = "oxc-miette", version = "2.7" }
sha2 = "0.10"
thiserror = "2"
