[package]
name = "solid-ast-facts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
oxc_syntax.workspace = true
serde.workspace = true
solid-facts-core = { path = "../solid-facts-core" }
thiserror.workspace = true
