[package]
name = "solid-checker-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
test = false
doctest = false

[dependencies]
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
solid-facts-backend = { path = "../solid-facts-backend" }
solid-ts-facts = { path = "../solid-ts-facts" }

[target.'cfg(target_family = "wasm")'.dependencies]
dom-expressions-jsx-compiler = { path = "../../third_party/dom-expressions/packages/jsx-compiler" }

[build-dependencies]
napi-build = "2"
