[package]
name = "solid-compiler-facts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
solid-facts-core = { path = "../solid-facts-core" }
thiserror.workspace = true
