[package]
name = "solid-facts-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
autobins = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
dom-expressions-jsx-compiler = { path = "../../third_party/dom-expressions/packages/jsx-compiler", default-features = false }
oxc_diagnostics.workspace = true
oxc_miette.workspace = true
solid-ast-facts = { path = "../solid-ast-facts" }
solid-compiler-facts = { path = "../solid-compiler-facts" }
solid-facts = { path = "../solid-facts" }
solid-facts-core = { path = "../solid-facts-core" }
solid-ts-facts = { path = "../solid-ts-facts" }
solid-reactive-ir = { path = "../solid-reactive-ir" }
solid-reactive-solver = { path = "../solid-reactive-solver" }
thiserror.workspace = true

[lib]
name = "solid_facts_backend"
path = "src/lib.rs"

[[bin]]
name = "solid-checker-rust"
path = "src/main.rs"

[[bin]]
name = "solid-checker-session-bench"
path = "src/bin/solid-checker-session-bench.rs"

[[bin]]
name = "solid-checker-cold-start-bench"
path = "src/bin/solid-checker-cold-start-bench.rs"
