[package]
name = "solid-lsp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
solid-compiler-facts = { path = "../solid-compiler-facts" }
solid-facts = { path = "../solid-facts" }
solid-facts-backend = { path = "../solid-facts-backend" }
solid-reactive-ir = { path = "../solid-reactive-ir" }
solid-reactive-solver = { path = "../solid-reactive-solver" }
solid-ts-facts = { path = "../solid-ts-facts" }
thiserror.workspace = true

[[bin]]
name = "solid-checkerd-rust"
path = "src/main.rs"
