[package]
name = "solid-reactive-ir"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
solid-ast-facts = { path = "../solid-ast-facts" }
solid-facts = { path = "../solid-facts" }
solid-facts-core = { path = "../solid-facts-core" }
solid-ts-facts = { path = "../solid-ts-facts" }
thiserror.workspace = true
