[package]
name = "solid-reactive-solver"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
solid-reactive-ir = { path = "../solid-reactive-ir" }
solid-ts-facts = { path = "../solid-ts-facts" }
