[package]
name = "solid-ts-facts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
ciborium.workspace = true
serde.workspace = true
solid-facts-core = { path = "../solid-facts-core" }
thiserror.workspace = true

[dev-dependencies]
sha2.workspace = true
